# airy_rewrite

./: .env.example  .gitignore  Dockerfile  README.md  autorooms.md  docker-compose.yml  pyproject.toml  requirements.txt  starter.py
.github/: dependabot.yml
airy/: misc.py  test.py
airy/api/: __init__.py
airy/api/middleware/: __init__.py
airy/api/routes/: sectionrole.py
airy/config/: __init__.py  api.py  bot.py  database.py
airy/etc/: __init__.py  constants.py
airy/extensions/auto_roles/: __init__.py
airy/extensions/autoroles/: __init__.py
airy/extensions/button_roles/: __init__.py  enums.py  menu.py
airy/extensions/dev/: __init__.py
airy/extensions/error_handler/: __init__.py
airy/extensions/fun/: __init__.py
airy/extensions/help/: __init__.py
airy/extensions/meta/: __init__.py
airy/extensions/misc/: __init__.py
airy/extensions/moderation/: __init__.py  checker.py  convertors.py  utils.py
airy/extensions/reaction_roles/: __init__.py
airy/extensions/reminder/: __init__.py
airy/extensions/report/: __init__.py
airy/extensions/role/: __init__.py
airy/models/: __init__.py  bot.py  components.py  context.py  errors.py  events.py  plugin.py  views.py
airy/services/: __init__.py  autoroles.py  autorooms.py  reaction_roles.py  scheduler.py  sectionroles.py
airy/static/: __init__.py  constants.py  settings_static.py
airy/utils/: __init__.py  cache.py  check_perms.py  checks.py  cli.py  db_backup.py  formats.py  helpers.py  logging.py  ratelimiter.py  time.py
migrations/: V1__Initial_migration.sql  revisions.json
(+47 files in other folders)
